.vitepress/theme/custom.css
/*keep the change things*/
:root {
  --c-divider: #65b486;

  --c-brand: #333;
  /*  don't forget change the --tag-bg for tags */
  --c-brand-light: #888;

  --header-height: 3.6rem;

  /* pure theme color */
  --li-dot-color: #737373;
  --title-color: var(--vp-c-brand);
  --date-color: #65b486;
  --date-font-family: Georgia, sans-serif;

  /* tag color */
  --tag-count: var(--vp-c-brand);
  --tag-text: var(--c-brand);
  --tag-bg: #eff6ff;
  --tag-hover: var(--vp-c-brand);

  --cmp-tag-bg: #eff6ff;
  --cmp-tag-text: #2e3452;

  --shade-bg: var(--c-brand);
  --shade-text: var(--vp-c-bg-soft);

  --vp-custom-block-details-code-bg: #e7e7f3;
  --details-code-block-bg: var(--vp-custom-block-details-code-bg);

  --vp-code-line-number-color: var(--c-brand);
  --vp-code-block-bg: #f7f7f7;
  --vp-code-line-highlight-color: rgba(0, 0, 0, 0.2);
  --vp-code-line-diff-add-color: rgba(125, 191, 123, 0.3);
  --vp-code-line-diff-add-symbol-color: rgb(64, 106, 62);
  --vp-code-line-diff-remove-color: rgba(255, 128, 128, 0.15);
  --vp-code-line-diff-remove-symbol-color: rgb(200, 70, 70);
}

.dark {
  --c-brand: #65b486;
  --c-brand-light: #aaa;
  --tag-text: #fff;
  --tag-bg: #318f5d;
  --tag-count: #111;
  /* --tag-bg: var(--title-color); */
  --tag-hover: #111;

  --shade-bg: #dfdfdf;
  --shade-text: var(--vp-c-bg-soft);

  --cmp-tag-bg: #2e3452;
  --cmp-tag-text: #eff6ff;

  /* --vp-code-block-bg: #292d3e; */
  --vp-custom-block-details-code-bg: #1f1f2f;
  --details-code-block-bg: var(--vp-code-block-bg);

  --vp-code-block-bg: #1a1a1a;
  --vp-code-line-number-color: var(--c-brand-light);
  --vp-code-line-highlight-color: rgba(0, 0, 0, 1);
}

.vp-doc [class*='language-'] pre {
  padding: 16px 0;
}

.vp-doc .custom-block code,
.vp-doc .custom-block div[class*='language-'] code,
.vp-doc .custom-block div[class*='language-'] pre {
  background-color: var(--details-code-block-bg);
}

figure img {
  margin: 0 auto;
}

figcaption {
  font-size: small;
  display: block;
  text-align: center;
  color: var(--c-brand-light)
}

/*theme reset*/
a:link {
  text-decoration: none;
  word-break: break-all;
}

.content a[rel~='noopener']:link,
a[rel~='noopener']:visited {
  color: var(--vp-c-text-1);
  font-weight: 500 !important;
}

.content a[rel~='noopener']:hover {
  color: var(--vp-c-brand);
}

.vp-doc h3 {
  margin-bottom: 1rem;
}

.container {
  max-width: 68rem !important;
}

/* pc + mobile start */

.VPDoc.has-aside .content-container {
  max-width: 68rem !important;
}

/* pc + mobile end */

/* Logo */
div.Layout > header > div > div > div.VPNavBarTitle > a > img {
  height: 66%;
}

/*tags and archives page style*/
.article {
  padding: 4px 0 4px 25px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.title-o {
  display: inline-block;
  margin-right: 10px;
  margin-bottom: 3px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  background-color: var(--li-dot-color);
}

.title {
  color: var(--title-color);
  font-size: 0.9375rem;
  font-weight: 600;
}

.title:hover {
  color: var(--c-brand);
}

.date {
  color: var(--date-color);
  font-family: var(--date-font-family);
}

.update-date {
  color: var(--date-color);
  font-size: small;
}

/*mobile*/
@media screen and (max-width: 768px) {
  .VPDoc {
    padding-top: 10px !important;
    padding-bottom: 20px !important;
  }

  .vp-doc h1 {
    font-size: 1.25rem !important;
  }

  .article {
    padding: 4px;
  }

  .title-o {
    margin-right: 4px;
  }

  .title {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 16.5em;
  }
}

/*pc -  adjust the header and sidebar's position */
@media screen and (min-width: 720px) {
  :root {
    --header-height: 5rem !important;
  }

  .nav-bar-title {
    font-size: 2rem !important;
    padding-left: 180px;
    letter-spacing: -1px;
    font-weight: 500 !important;
    font-family: Optima, sans-serif !important;
  }

  .nav-links {
    padding-right: 180px !important;
  }

  .nav-link .item {
    font-weight: 600;
  }

  .page {
    margin-left: 0 !important;
    min-height: calc(100vh - 5rem);
  }

  .sidebar {
    left: auto !important;
    right: 1rem !important;
    border-right: none !important;
    padding-top: 4rem !important;
    width: 14rem !important;
  }

  .sidebar > .sidebar-links {
    border-left: 1px solid var(--c-divider);
  }

  .sidebar-link-item {
    border-left-width: 1px;
    margin-left: -1px;
  }
}

/* hide sidebar when width is too small*/
@media screen and (min-width: 720px) and (max-width: 1380px) {
  .VPDoc .aside {
    display: none;
  }
}

